# click-to-hear

./: .envrc  .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: task.md
notebook/: sample.ipynb
scripts/: jupyter.sh
src/audio/: __init__.py  sam_audio_wrapper.py
src/captioning/: blip2_captioner.py
src/config/: device.py  settings.py
src/segmentation/: sam3_wrapper.py
src/ui/: app.py
src/video/: processor.py
tests/: test_seed.py
