[project]
name = "click-to-hear"
version = "0.1.0"
description = "Click on objects in video to isolate their audio - Visual segmentation meets audio separation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "transformers @ git+https://github.com/huggingface/transformers",
    "sam-audio @ file:///tmp/sam-audio",
    "accelerate>=0.25.0",
    "gradio>=5.0.0",
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "huggingface-hub>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# macOS ARM64で問題のある依存関係を除外
override-dependencies = [
    # decord: macOS ARM64非対応、ImageBindの依存関係だが音声処理には不要
    "decord; sys_platform == 'never'",
    # xformers: NVIDIA CUDA専用、macOSでは非対応・不要
    "xformers; sys_platform == 'never'",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
